current version
===============

interface:
- new method SCIPsolveProbingLPWithPricing()

parameters:
- new parameter constraints/linear/separateall
- new parameter conflict/contboundlp

features:
- extensions to the LP are kept even if the LP is not solved at the current node; however, if the LP turned out to
  be numerically instable, the extensions of the current node are still discarded
- new primal heuristic "shifting"

fixed bugs:
- fixed bug with invalid lazy updates after a restart where the LP is not solved again (e.g., due to all variables
  being fixed)
- fixed bug in MPS file reader with OBJSENSE
- fixed numerical bug in SCIPrealToRational() [thanks to Anders Schack-Nielsen]


SCIP version 0.81
=================

examples:
- added two small pricer examples (for C and C++)
- updated example code (s.t. it compiles again)

interface:
- new method SCIPgetCuts()
- callback method CONSSEPA of constraint handler was split into two methods CONSSEPALP and CONSSEPASOL
- replaced method SCIPconshdlrWasSeparationDelayed() by two methods SCIPconshdlrWasLPSeparationDelayed()
  and SCIPconshdlrWasSolSeparationDelayed()
- callback method SEPAEXEC of separator was split into two methods SEPAEXECLP and SEPAEXECSOL
- replaced method SCIPsepaWasDelayed() by SCIPsepaWasLPDelayed() and SCIPsepaWasSolDelayed()
- additional parameter "sol" for methods SCIPaddCut(), SCIPgetCutEfficacy(), and SCIPisCutEfficacious()
- additional parameter "sol" for method SCIPseparateKnapsackCover()
- new methods SCIPsepaGetNConssFound() and SCIPsepaGetNDomredsFound()
- new methods SCIPgetVarConflictScore(), and SCIPgetVarConflictScoreCurrentRun()
- new method SCIPvarSetData()
- new method SCIPcreateUnknownSol()
- primal solutions may now contain values marked to be unknown (value is SCIP_UNKNOWN); unknown values don't contribute
  to the objective value of the solution; an unknown solution value should be treated as an arbitrary value in the